--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-/* src/assets/fonts/fonts.css */
-
-/* @font-face {
-  font-family: 'Open Sans';
-  src: url('./OpenSans/OpenSans-Regular.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-} */
-
-/* @font-face {
-  font-family: 'Open Sans';
-  src: url('./OpenSans/OpenSans-Bold.woff2') format('woff2');
-  font-weight: 700;
-  font-style: normal;
-} */
 
 @font-face {
   font-family: 'Rozha One';
@@ -82,4 +29,8 @@
   font-family: 'Righteous';
   src: url('./assets/fonts/Righteous/Righteous-Regular.ttf') format('woff2');
   font-weight: 500;
+}
+
+*{
+  font-family: inter !important;
 }
